@@ -1,6 +1,9 @@
 New in spot 2.10.1.dev  (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - twa_graph::purge_dead_states() now also removes edges labeled by
+    bddfalse.
 
 New in spot 2.10.1  (2021-11-19)
 
